--- a/InputDemoRecorder.csproj
+++ b/InputDemoRecorder.csproj
@@ -53,12 +53,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AxisInputRecorder.cs" />
-    <Compile Include="ButtonInputRecorder.cs" />
-    <Compile Include="FrameInputRecorder.cs" />
+    <Compile Include="DemoFileLoader.cs" />
+    <Compile Include="InputRecording\AxisInputRecorder.cs" />
+    <Compile Include="InputRecording\ButtonInputRecorder.cs" />
+    <Compile Include="InputRecording\FrameInputRecorder.cs" />
     <Compile Include="InputChannelPatches.cs" />
     <Compile Include="InputDemoPlayer.cs" />
-    <Compile Include="InputDemoRecorder.cs" />
+    <Compile Include="InputRecording\InputDemoRecorder.cs" />
     <Compile Include="InputDemoRecorderStart.cs" />
     <Compile Include="InputGiver\ClientInputChannels.cs" />
     <Compile Include="InputGiver\NetworkedInputChannel.cs" />
