--- a/CurrentOW/InputDemoRecorder.csproj
+++ b/CurrentOW/InputDemoRecorder.csproj
@@ -62,9 +62,15 @@
     <Reference Include="UnityEngine.IMGUIModule">
       <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Outer Wilds\OuterWilds_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.PhysicsModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Outer Wilds\OuterWilds_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColliderVisualizer.cs" />
     <Compile Include="DemoFileLoader.cs" />
+    <Compile Include="GLHelpers.cs" />
     <Compile Include="InputRecording\InputsCurveRecorder.cs" />
     <Compile Include="InputChannelPatches.cs" />
     <Compile Include="InputDemoPlayer.cs" />
