--- a/CurrentOW/InputDemoRecorder.csproj
+++ b/CurrentOW/InputDemoRecorder.csproj
@@ -68,15 +68,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ColliderVisualizer.cs" />
-    <Compile Include="DemoFileLoader.cs" />
-    <Compile Include="GLHelpers.cs" />
+    <Compile Include="FileIO\DemoFileLoader.cs" />
+    <Compile Include="InputDemoRecorderUI.cs" />
     <Compile Include="InputRecording\InputsCurveRecorder.cs" />
     <Compile Include="InputChannelPatches.cs" />
-    <Compile Include="InputDemoPlayer.cs" />
+    <Compile Include="InputPlaying\InputDemoPlayer.cs" />
     <Compile Include="InputRecording\InputDemoRecorder.cs" />
-    <Compile Include="InputDemoRecorderStart.cs" />
-    <Compile Include="TASFileLoader.cs" />
+    <Compile Include="InputDemoRecorderModStart.cs" />
+    <Compile Include="FileIO\TASFileLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
